# kde-gelistirme-kitabi

./: .directory  .gitignore  Makefile  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
00/: kimicin.html  telif.html
05/: 00-merhaba-dunya.html  01-KXmlGuiWindow-kullanimi.html  02-KActions-kullanimi.html  03-dosya-acma-kaydetme.html  04-komut-satiri-argumanlari.html
06/: 01-mevcut-kde-oyunlari.html
_sources/: index.txt
_sources/00/: kimicin.txt
_sources/05/: 00-merhaba-dunya.txt  04-komut-satiri-argumanlari.txt
icerik/: Makefile  conf.py  index.rst
icerik/00/: telif.rst
icerik/05/: 00-merhaba-dunya.rst  01-KXmlGuiWindow-kullanimi.rst  02-KActions-kullanimi.rst  03-dosya-acma-kaydetme.rst
icerik/05/00/: CMakeLists.txt  main.cpp
icerik/05/01/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
icerik/05/02/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
icerik/05/03/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  tutorial4ui.rc
icerik/05/04/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  tutorial5ui.rc
icerik/06/: 01-mevcut-kde-oyunlari.rst
icerik/_build/doctrees/: environment.pickle  index.doctree
icerik/_build/doctrees/00/: kimicin.doctree
icerik/_build/doctrees/05/: 00-merhaba-dunya.doctree
icerik/_build/epub/: .buildinfo  content.opf  genindex.html  index.html  kde_gelistirme.epub  search.html  toc.ncx
icerik/_build/epub/00/: kimicin.html
icerik/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
(+4 files in other folders)
